--- a/index.html
+++ b/index.html
@@ -1,31 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First Repo Assignment</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body class="fonts">
-    
-    <head class="img-bg">
-<nav>
-    <h1 class="nav-title">
-        LOGO
-    </h1>
-    <ul>
-        <li><a href="#"><button class="btn">Sign Up</button></a></li>
-    </ul>
-</nav>
-    </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body class="img-bg">
+    <header class="fonts">
+      <nav>
+        <h1 class="nav-title">LOGO</h1>
+        <ul>
+          <li>
+            <a href="#"><button class="btn">Sign Up</button></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main>
+      <div class="hero-section">
+        <h1 class="stay">Cool Dark UI Template for <br />Webflow Agencies!</h1>
+        <a href="#"><button class="btn1">Stay Focused</button></a>
+      </div>
+      <div style="background-color: white">
+        <div class="action">
+          <div style="margin-left: 150px">
+            <h1>See It in Action</h1>
+            <p class="ptag">
+              Explore the live preview and imagine your <br />
+              brand in this bold new look.
+            </p>
+            <a href="#"><button class="btn1">Launch Live Preview</button></a>
+          </div>
+          <img class="img-radius" src="wc-mini.png" alt="" />
+        </div>
+        <div class="numbers">
+          <h1 style="font-size: 38px" class="stay">
+            Joined Thousands of Productive Users
+          </h1>
 
+          <div class="lakh">
+            <div class="hajar">
+              <h1 class="boro-text">50K</h1>
+              <p class="shoto-text">Active Users</p>
+            </div>
+            <div class="hajar">
+              <h1 class="boro-text">2M+</h1>
+              <p class="shoto-text">Focus Sessions</p>
+            </div>
+            <div class="hajar">
+              <h1 class="boro-text">95%</h1>
+              <p class="shoto-text">Satisfaction Rate</p>
+            </div>
+          </div>
+        </div>
+         <div>
+             <h1 style="font-size: 42px;" class="stay">What our users say</h1>
+             <div>
+                <div>
+                    <img src="icon-star.png" alt="">
+                    <img src="icon-star.png" alt="">
+                    <img src="icon-star.png" alt="">
+                    <img src="icon-star.png" alt="">
+                    <img src="icon-star.png" alt="">
+                </div>
+                <h2 style="font-size: 25px;" class="Loved">Loved by Designers</h2>
+                <p class="review">This template instantly leveled up our <br> presence.” – Studio Varto</p>
+
+             </div>
+             <div style="display: flex;">
+                <img style="border-radius: 50px; width: 50px; height: 50px; " src="avatar.png" alt="Profile">
+                <div class="Mifti">
+                <h1>Mifti</h1>
+                <p>Date : 7/11/2025</p>
+             </div>
+             </div>           
+          </div>
+      </div>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
