--- a/index.html
+++ b/index.html
@@ -60,28 +60,36 @@
             </div>
           </div>
         </div>
-         <div>
-             <h1 style="font-size: 42px;" class="stay">What our users say</h1>
-             <div>
-                <div>
-                    <img src="icon-star.png" alt="">
-                    <img src="icon-star.png" alt="">
-                    <img src="icon-star.png" alt="">
-                    <img src="icon-star.png" alt="">
-                    <img src="icon-star.png" alt="">
-                </div>
-                <h2 style="font-size: 25px;" class="Loved">Loved by Designers</h2>
-                <p class="review">This template instantly leveled up our <br> presence.” – Studio Varto</p>
-
-             </div>
-             <div style="display: flex;">
-                <img style="border-radius: 50px; width: 50px; height: 50px; " src="avatar.png" alt="Profile">
-                <div class="Mifti">
-                <h1>Mifti</h1>
+        <div>
+          <h1 style="font-size: 42px" class="stay">What our users say</h1>
+          <div class="class-bana">
+            <div>
+              <div>
+                <img src="icon-star.png" alt="" />
+                <img src="icon-star.png" alt="" />
+                <img src="icon-star.png" alt="" />
+                <img src="icon-star.png" alt="" />
+                <img src="icon-star.png" alt="" />
+              </div>
+              <h2 style="font-size: 25px" class="Loved">Loved by Designers</h2>
+              <p class="review">
+                This template instantly leveled up our <br />
+                presence.” – Studio Varto
+              </p>
+            </div>
+            <div style="display: flex">
+              <img
+                style="border-radius: 50px; height: 50px"
+                src="avatar.png"
+                alt="Profile"
+              />
+              <div class="Mifti">
+                <h1 style="font-size: 20px">Mifti</h1>
                 <p>Date : 7/11/2025</p>
-             </div>
-             </div>           
+              </div>
+            </div>
           </div>
+        </div>
       </div>
     </main>
     <footer></footer>
