--- a/index.html
+++ b/index.html
@@ -62,30 +62,92 @@
         </div>
         <div>
           <h1 style="font-size: 42px" class="stay">What our users say</h1>
-          <div class="class-bana">
-            <div>
+          <div style="display: flex; justify-content: center;  ">
+            <div class="class-bana">
               <div>
-                <img src="icon-star.png" alt="" />
-                <img src="icon-star.png" alt="" />
-                <img src="icon-star.png" alt="" />
-                <img src="icon-star.png" alt="" />
-                <img src="icon-star.png" alt="" />
+                <div>
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                </div>
+                <h2 style="font-size: 25px" class="Loved">
+                  Loved by Designers
+                </h2>
+                <p class="review">
+                  This template instantly leveled up our <br />
+                  presence.” – Studio Varto
+                </p>
               </div>
-              <h2 style="font-size: 25px" class="Loved">Loved by Designers</h2>
-              <p class="review">
-                This template instantly leveled up our <br />
-                presence.” – Studio Varto
-              </p>
+              <div style="display: flex">
+                <img
+                  style="border-radius: 50px; height: 50px; margin-top: 13px"
+                  src="avatar.png"
+                  alt="Profile"
+                />
+                <div class="Mifti">
+                  <h1 style="font-size: 20px">Mifti</h1>
+                  <p style="margin-top: 0%">Date : 7/11/2025</p>
+                </div>
+              </div>
             </div>
-            <div style="display: flex">
-              <img
-                style="border-radius: 50px; height: 50px"
-                src="avatar.png"
-                alt="Profile"
-              />
-              <div class="Mifti">
-                <h1 style="font-size: 20px">Mifti</h1>
-                <p>Date : 7/11/2025</p>
+            <div class="class-bana">
+              <div>
+                <div>
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                </div>
+                <h2 style="font-size: 25px" class="Loved">
+                  Loved by Designers
+                </h2>
+                <p class="review">
+                  This template instantly leveled up our <br />
+                  presence.” – Studio Varto
+                </p>
+              </div>
+              <div style="display: flex">
+                <img
+                  style="border-radius: 50px; height: 50px; margin-top: 13px"
+                  src="avatar.png"
+                  alt="Profile"
+                />
+                <div class="Mifti">
+                  <h1 style="font-size: 20px">Mifti</h1>
+                  <p style="margin-top: 0%">Date : 7/11/2025</p>
+                </div>
+              </div>
+            </div>
+            <div class="class-bana">
+              <div>
+                <div>
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                  <img src="icon-star.png" alt="" />
+                </div>
+                <h2 style="font-size: 25px" class="Loved">
+                  Loved by Designers
+                </h2>
+                <p class="review">
+                  This template instantly leveled up our <br />
+                  presence.” – Studio Varto
+                </p>
+              </div>
+              <div style="display: flex">
+                <img
+                  style="border-radius: 50px; height: 50px; margin-top: 13px"
+                  src="avatar.png"
+                  alt="Profile"
+                />
+                <div class="Mifti">
+                  <h1 style="font-size: 20px">Mifti</h1>
+                  <p style="margin-top: 0%">Date : 7/11/2025</p>
+                </div>
               </div>
             </div>
           </div>
