--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           </div>
         </div>
         <div>
-          <h1 style="font-size: 42px" class="stay">What our users say</h1>
-          <div style="display: flex; justify-content: center;  ">
+          <h1 style="font-size: 42px; margin-top: 100px ;" class="stay">What our users say</h1>
+          <div style="display: flex; justify-content: center; margin-top: 50px; ">
             <div class="class-bana">
               <div>
                 <div>
@@ -102,21 +102,20 @@
                   <img src="icon-star.png" alt="" />
                 </div>
                 <h2 style="font-size: 25px" class="Loved">
-                  Loved by Designers
+                  Loved by Acotr    
                 </h2>
                 <p class="review">
-                  This template instantly leveled up our <br />
-                  presence.” – Studio Varto
+                  “Gave our brand the edge it needed <br> — sleek and professional.” – Echo Design Co.
                 </p>
               </div>
               <div style="display: flex">
                 <img
                   style="border-radius: 50px; height: 50px; margin-top: 13px"
-                  src="avatar.png"
+                  src="pasa.png"
                   alt="Profile"
                 />
                 <div class="Mifti">
-                  <h1 style="font-size: 20px">Mifti</h1>
+                  <h1 style="font-size: 20px">Pasha vai</h1>
                   <p style="margin-top: 0%">Date : 7/11/2025</p>
                 </div>
               </div>
@@ -131,27 +130,37 @@
                   <img src="icon-star.png" alt="" />
                 </div>
                 <h2 style="font-size: 25px" class="Loved">
-                  Loved by Designers
+                  Loved by Developer
                 </h2>
                 <p class="review">
-                  This template instantly leveled up our <br />
-                  presence.” – Studio Varto
+                  “Clients noticed the difference instantly. Clean, <br> bold, unforgettable.” – Nova & Co.
                 </p>
               </div>
               <div style="display: flex">
                 <img
                   style="border-radius: 50px; height: 50px; margin-top: 13px"
-                  src="avatar.png"
+                  src="jankar.png"
                   alt="Profile"
                 />
                 <div class="Mifti">
-                  <h1 style="font-size: 20px">Mifti</h1>
+                  <h1 style="font-size: 20px">Jankar vai</h1>
                   <p style="margin-top: 0%">Date : 7/11/2025</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div style="text-align: center;">
+          <h1 style="font-size: 50px;" class="stay">Ready to focus better</h1>
+          <p class="shoto-text"; style="font-family: Quicksand;">This template instantly leveled up our presence.” – Studio Vertex</p>
+          <button class="btn1"">Ger Started Free</button>
+          
+        </div>
+        <div style="text-align: center; margin-top: 20px;">
+         <img style="border-radius: 50px;" src="wc-big.png" alt="">
+
+        </div>
+    
       </div>
     </main>
     <footer></footer>
