--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body class="img-bg">
     <header class="fonts">
       <nav>
-        <h1 class="nav-title">LOGO</h1>
+        <h1 class="nav-title">Zarif Hasan</h1>
         <ul>
           <li>
             <a href="#"><button class="btn">Sign Up</button></a>
@@ -28,7 +28,7 @@
         <h1 class="stay">Cool Dark UI Template for <br />Webflow Agencies!</h1>
         <a href="#"><button class="btn1">Stay Focused</button></a>
       </div>
-      <div style="background-color: white">
+      <div style="background-color: #F5F8FF">
         <div class="action">
           <div style="margin-left: 150px">
             <h1>See It in Action</h1>
@@ -150,17 +150,30 @@
             </div>
           </div>
         </div>
-        <div style="text-align: center;">
+        <div class="focus">
+                  <div  style="text-align: center;">
           <h1 style="font-size: 50px;" class="stay">Ready to focus better</h1>
           <p class="shoto-text"; style="font-family: Quicksand;">This template instantly leveled up our presence.” – Studio Vertex</p>
           <button class="btn1"">Ger Started Free</button>
-          
         </div>
-        <div style="text-align: center; margin-top: 20px;">
+                <div style="text-align: center; margin-top: 20px;">
          <img style="border-radius: 50px;" src="wc-big.png" alt="">
 
         </div>
-    
+        </div>
+<div class="touch">
+  <h1 >Let’s Get in <br> Touch</h1>
+  <div> 
+    <p>Email</p>
+    <input type="email"; placeholder="example@email.com">
+    <p>Name</p>
+    <input type="name"; placeholder="Full Name"> 
+    <p>Message</p>
+    <input style="padding-bottom: 70px;" type="message"; placeholder="write your message....">
+    <button style="display: block; padding-left: 106px; padding-right: 106px; margin-top: 38px;" class="btn1">Get in Touch</button>
+  </div>
+  
+</div>
       </div>
     </main>
     <footer></footer>
