--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
 </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <h1>
+        Zarif Hasan
+      </h1>
+      <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+    </footer>
   </body>
 </html>
