--- a/index.html
+++ b/index.html
@@ -177,10 +177,16 @@
       </div>
     </main>
     <footer>
-      <h1>
+      <h1 style="font-size: 70px; font-weight: bold;" class="stay">
         Zarif Hasan
       </h1>
       <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+      <div>
+        <p>Home</p>
+        <p>About</p>
+        <p>How it Work</p>
+        <p>Services</p>
+      </div>
     </footer>
   </body>
 </html>
